--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
             font-weight: normal;
             font-style: normal;
         }
-    
-        </style>
+    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -25,17 +24,19 @@
 </head>
 
 <body style="font-family: 'Inter'">
-    <section class="p1 px-[247px] bg-[radial-gradient(circle,#222222_0%,#111111_100%)]">
+    <section class="p1 px-[13.2%] bg-[radial-gradient(circle,#222222_0%,#111111_100%)] h-[715px]">
         <header>
             <div class="hero">
                 <div class="nav-bar pt-[57px] flex items-center justify-between">
                     <div class="title italic text-4xl font-extrabold text-[rgba(230,83,60,1)]">Fitness</div>
-                    <div class="side-block border border-gray-500 rounded-full flex items-center">
+                    <div class="side-block border border-gray-700/50 rounded-full flex items-center h-[46px]">
                         <ul class="text-[white] flex items-center text-[23.4px]">
-                            <li class="flex justify-center w-[119.6px] px-[26px]"><a class=" " href="">Home</a></li>
-                            <li class="flex justify-center w-[119.6px] px-[26px]"><a href="">Service</a></li>
-                            <li class="flex justify-center w-[119.6px] px-[26px]"><a href="">Contact</a></li>
-                            <li class="flex justify-center w-[119.6px] px-[26px]"><a href="">About</a></li>
+                            <li class="flex w-[119.6px] h-[38px] pl-[4px] pr-[26px]"><a
+                                    class="text-[18px] w-[92px] bg-[rgba(230,83,60,1)] rounded-full flex justify-center                            items-center"
+                                    href="">Home</a></li>
+                            <li class="flex w-[119.6px] px-[26px]"><a class="text-[18px] " href="">Service</a></li>
+                            <li class="flex w-[119.6px] px-[26px]"><a class="text-[18px] " href="">Contact</a></li>
+                            <li class="flex w-[119.6px] px-[26px]"><a class="text-[18px] " href="">About</a></li>
                         </ul>
                     </div>
                 </div>
@@ -43,31 +44,197 @@
         </header>
         <main>
             <section class="hero">
-                <div class="hero-container flex">
-                    <div class="leftt-side w-[520px] mt-[96px] text-[white]">
-                        <div class="title text-[78px] font-extrabold leading-[1.2] pb-[28px              ]">Get body in <span class="text-[78px] font-normal" style="font-family: 'Miama', cursive; ">shape</span> & stay healthy</div>
-                        <div class="subtitle">A huge selection of health and fitness content, healthy recipes and
-                            transformation stories to help you get fit and stay
-                            fit!</div>
-                        <div class="buttons"><button class="join-club">Join Club Now!</button>
-                            <button class="download">Download App</button>
+                <div class="hero-container flex justify-between">
+                    <div class="leftt-side relative z-10 w-[520px] mt-[96px] text-[white]">
+                        <div class="title text-[78px] font-extrabold leading-[.78] pb-[40px]">Get body in <span
+                                class="text-[160px] font-normal" style="font-family: 'Miama', cursive; ">shape</span> &
+                            stay healthy</div>
+                        <div class="subtitle text-[16px] pb-[28px] w-[480px]">
+                            <p class="text-white/40">A huge selection of health and fitness content, healthy recipes and
+                                transformation stories to help you get fit and stay
+                                fit!</p>
+                        </div>
+                        <div class="buttons "><button
+                                class="join-club w-[224px] h-[54px] bg-[rgba(230,83,60,1)] rounded-full font-semibold text-[18px]">Join
+                                Club Now!</button>
+                            <button
+                                class="download w-[224px] h-[54px] border border-white ml-[14px] rounded-full font-semibold text-[18px]">Download
+                                App</button>
                         </div>
                     </div>
-                    <div class="right-side">
-                        <div class="video">
-                            <p>500+</p>
-                            <p>Free workout videos</p>
+                    <div class="right-side absolute right-[13.2%]">
+                        <div class="img mt-[32px] right-side-relative"><img class="flex-shrink-0 w-[349px]"
+                                src="images/images 2.png" alt=""></div>
+                        <div
+                            class="video w-[193px] pl-[20px] pt-[10px] absolute top-[150px] right-[-50px] h-[98px] bg-gray-50/10 rounded-[12px]">
+                            <p class="text-[40px] text-white font-extrabold mb-[-5px]">500+</p>
+                            <p class="text-[13px] text-white/65">Free workout videos</p>
                         </div>
-                        <div class="tutorial">
-                            <p>350+</p>
-                            <p>Video tutorial</p>
+                        <div
+                            class="tutorial flex items-center w-[193px] pl-[10px] absolute right-[250px] top-[450px] right-[26%] h-[98px] bg-gray-600/10 backdrop-blur-sm rounded-[12px]">
+                            <div class="flex">
+                                <!-- Circle -->
+                                <div
+                                    class="w-[80px] h-[80px] bg-[rgba(230,83,60,1)] rounded-full scale-60 flex items-center justify-center">
+                                    <!-- Triangle -->
+                                    <div class="w-0 h-0 
+                                                border-l-[40px] border-l-transparent 
+                                                border-r-[40px] border-r-transparent 
+                                                border-b-[70px] border-b-white scale-35 rotate-90">
+                                    </div>
+                                </div>
+
+
+                            </div>
+
+                            <div>
+                                <p class="text-[24px] pb-[10px] text-white font-extrabold mb-[-5px]">350+</p>
+                                <p class="text-[13px] text-white/65">Video tutorial</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
     </section>
+    <section class="p2 bg-black flex justify-center">
+        <div class="p2-container pt-[100px]">
+            <div class="w-[600px] mx-auto">
+                <h1 class="title text-[48px] font-extrabold text-white flex justify-center ">Change Your Habits</h1>
+                <p class="subtitle text-white/50 text-center text-[14px]">We believe fitness should be accessible to everyone, everywhere, regardless of
+                    income or access to a gym.</p>
+            </div>
+            <div class="cards flex">
+                <div class="card1">
+                    <img src="images/image 3.png" alt="">
+                    <div class="texts">
+                        <h2>Movement</h2>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                </div>
+                <div class="card2">
+                    <img src="images/image 2.png" alt="">
+                    <div class="texts">
+                        <h2>Time</h2>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                </div>
+                <div class="card3">
+                    <img src="images/image 4.png" alt="">
+                    <div class="texts">
+                        <h2>Practice</h2>
+                        <p>We believe fitness should be accessible to everyone</p>
+                    </div>
+                </div>
+                <div class="card4">
+                    <img src="images/image 5.png" alt="">
+                    <div class="texts">
+                        <h2>Weight Loss</h2>
+                        <p>We believe fitness should be accessible to everyone </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="p3">
+        <div class="p3-container">
+            <div class="p3card">
+                <div class="left">
+                    <div class="title"></div>
+                    <div class="subtitle"></div>
+                    <button class="join"></button>
+                </div>
+                <div class="right"><img src="" alt=""></div>
+            </div>
+        </div>
+        <div class="train-exer">
+            <h1></h1>
+            <p></p>
+        </div>
+    </section>
+    <section class="p4">
+        <div class="img"></div>
+        <div class="bmi">
+            <h1></h1>
+            <p></p>
+        </div>
+    </section>
+    <section class="p5">
+        <div class="bg">
+            <div class="left">
+                <h1></h1>
+                <table></table>
+            </div>
+            <div class="right">
+                <h1></h1>
+                <p></p>
+                <form action="">
+                    <div><input type=""><input type="text"><input type="text"><input type="text"></div>
+                    <div><input type="text"></div>
+                    <button class="calculate"></button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <section class="p6">
+        <div>
+            <h1></h1>
+            <p></p>
+        </div>
+        <div class="img">
+            <div class="img1">
+                <img src="" alt="">
+                <p class="name"></p>
+            </div>
+            <div class="img2">
+                <img src="" alt="">
+                <p class="name"></p>
+            </div>
+            <div class="img3">
+                <img src="" alt="">
+                <p class="name"></p>
+            </div>
+            <div class="img4">
+                <img src="" alt="">
+                <p class="name"></p>
+            </div>
+            <div class="img5">
+                <img src="" alt="">
+                <p class="name"></p>
+            </div>
+            <div class="img6">
+                <img src="" alt="">
+                <p class="name"></p>
+            </div>
+        </div>
+    </section>
+    <section class="p7">
+        <div class="left">
+            <h1></h1>
+            <p></p>
+        </div>
+        <div class="mid">
+            <h1></h1>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="right">
+            <h1></h1>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </section>
     </main>
-    <footer></footer>
+    <footer>
+        <p class="rights"></p>
+    </footer>
 </body>
 
 </html>
