--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Assignment-2</title>
 </head>
 
-<body style="font-family: 'Inter'">
+<body class="text-white" style="font-family: 'Inter'">
     <section class="p1 px-[13.2%] bg-[radial-gradient(circle,#222222_0%,#111111_100%)] h-[715px]">
         <header>
             <div class="hero">
@@ -67,7 +67,7 @@
                                 src="images/images 2.png" alt=""></div>
                         <div
                             class="video w-[193px] pl-[20px] pt-[10px] absolute top-[150px] right-[-50px] h-[98px] bg-gray-50/10 rounded-[12px]">
-                            <p class="text-[40px] text-white font-extrabold mb-[-5px]">500+</p>
+                            <p class="text-[40px] font-extrabold mb-[-5px]">500+</p>
                             <p class="text-[13px] text-white/65">Free workout videos</p>
                         </div>
                         <div
@@ -88,7 +88,7 @@
                             </div>
 
                             <div>
-                                <p class="text-[24px] pb-[10px] text-white font-extrabold mb-[-5px]">350+</p>
+                                <p class="text-[24px] pb-[10px] font-extrabold mb-[-5px]">350+</p>
                                 <p class="text-[13px] text-white/65">Video tutorial</p>
                             </div>
                         </div>
@@ -97,62 +97,74 @@
             </section>
     </section>
     <section class="p2 bg-black flex justify-center">
-        <div class="p2-container pt-[100px]">
-            <div class="w-[600px] mx-auto">
+        <div class="p2-container py-[100px] mx-[13.2%]">
+            <div class="w-[600px] mx-auto pb-[58px]">
                 <h1 class="title text-[48px] font-extrabold text-white flex justify-center ">Change Your Habits</h1>
-                <p class="subtitle text-white/50 text-center text-[14px]">We believe fitness should be accessible to everyone, everywhere, regardless of
+                <p class="subtitle text-white/50 text-center text-[14px]">We believe fitness should be accessible to
+                    everyone, everywhere, regardless of
                     income or access to a gym.</p>
             </div>
-            <div class="cards flex">
+            <div class="cards flex justify-between text-white text-center">
                 <div class="card1">
-                    <img src="images/image 3.png" alt="">
+                    <img class="rounded-full mb-[30px]" src="images/image 3.png" alt="">
                     <div class="texts">
-                        <h2>Movement</h2>
-                        <p>We believe fitness should be accessible to everyone</p>
+                        <h2 class="text-[18px] font-semibold pb-[6px]">Movement</h2>
+                        <p class="text-[14px] text-white/50">We believe fitness should be accessible to everyone</p>
                     </div>
                 </div>
                 <div class="card2">
-                    <img src="images/image 2.png" alt="">
+                    <img class="rounded-full mb-[30px]" src="images/image 2.png" alt="">
                     <div class="texts">
-                        <h2>Time</h2>
-                        <p>We believe fitness should be accessible to everyone</p>
+                        <h2 class="text-[18px] font-semibold pb-[6px]">Time</h2>
+                        <p class="text-[14px] text-white/50">We believe fitness should be accessible to everyone</p>
                     </div>
                 </div>
                 <div class="card3">
-                    <img src="images/image 4.png" alt="">
+                    <img class="rounded-full mb-[30px]" src="images/image 4.png" alt="">
                     <div class="texts">
-                        <h2>Practice</h2>
-                        <p>We believe fitness should be accessible to everyone</p>
+                        <h2 class="text-[18px] font-semibold pb-[6px]">Practice</h2>
+                        <p class="text-[14px] text-white/50">We believe fitness should be accessible to everyone</p>
                     </div>
                 </div>
                 <div class="card4">
-                    <img src="images/image 5.png" alt="">
+                    <img class="rounded-full mb-[30px]" src="images/image 5.png" alt="">
                     <div class="texts">
-                        <h2>Weight Loss</h2>
-                        <p>We believe fitness should be accessible to everyone </p>
+                        <h2 class="text-[18px] font-semibold pb-[6px]">Weight Loss</h2>
+                        <p class="text-[14px] text-white/50">We believe fitness should be accessible to everyone </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="p3">
-        <div class="p3-container">
-            <div class="p3card">
-                <div class="left">
-                    <div class="title"></div>
-                    <div class="subtitle"></div>
-                    <button class="join"></button>
+    <section class="p3 bg-black">
+        <div
+            class="p3-container mb-[100px] mx-[13.2%] h-[371px] justify-between bg-[rgba(34,34,34,1)] rounded-[18px] pl-[60px] pr-[40px]">
+            <div class="p3card flex justify-between">
+                <div class="left flex-col py-[42px]">
+                    <div class="title text-[48px] leading-[1.2] w-[400px] font-extrabold pb-[14px]">Run an Extra Mile
+                        Easily</div>
+                    <div class="subtitle text-[14px] text-white/50 leading-[24px] w-[400px] pb-[34px]">We believe
+                        fitness should be accessible to everyone, everywhere, regardless of
+                        income or access to a gym. With hundreds
+                        of professional workouts.</div>
+                    <button class="join w-[224px] h-[54px] bg-[rgba(230,83,60,1)] rounded-full text-[18px]">Join
+                        Now</button>
                 </div>
-                <div class="right"><img src="" alt=""></div>
+                <div class="right w-[366px] h-[312px]  my-auto overflow-hidden "><img
+                        class=" w-[366px] h-[312px]  object-cover rounded-[18px]" src="images/run.jpg" alt=""></div>
             </div>
         </div>
-        <div class="train-exer">
-            <h1></h1>
-            <p></p>
+        <div class="train-exer mx-[13.2%] w-[640px]">
+            <h1 class="text-[48px] font-extrabold pb-[14px]">Trainings and Exercises</h1>
+            <p class="text-[14px] text-white/50 leading-[24px]">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.
+            </p>
         </div>
     </section>
-    <section class="p4">
-        <div class="img"></div>
+    <section class="p4 bg-black px-[13.2%]">
+        <div class="flex-wrap bg-white overflow-hidden">
+            <div class="img flex"><img class="h-[201.5px]" src="images/exercise1.jpg" alt=""><img class="h-[201.5px]" src="images/exercise2.png" alt=""><img class="h-[201.5px]" src="images/exercise3.png" alt=""></div>
+            <div class="img flex"><img class="h-[201.5px]" src="images/exercise4.png" alt=""><img class="h-[201.5px]" src="images/exercise5.jpg" alt=""><img class="h-[201.5px]" src="images/exercise6.jpg" alt=""></div>
+        </div>
         <div class="bmi">
             <h1></h1>
             <p></p>
