--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Assignment-2</title>
 </head>
 
-<body class="text-white" style="font-family: 'Inter'">
+<body class="text-white" style="font-family: 'Inter' bg-black">
     <section class="p1 px-[13.2%] bg-[radial-gradient(circle,#222222_0%,#111111_100%)] h-[715px]">
         <header>
             <div class="hero">
@@ -194,7 +194,7 @@
             <div class="row-2 h-[251px] flex overflow-hidden">
                 <div class="col-1 relative w-[40%] bg-[url('/images/exercise4.png')] bg-cover bg-center">
                     <div class="overlay absolute inset-0 bg-[rgba(0,0,0,0.5)]">
-                        <p class="font-medium text-[14px] pt-[25.5px] pl-[350px]">Leg Press: Works the <br>quadriceps and glutes</p>
+                        <p class="font-medium text-[14px] pt-[25.5px] pl-[60%]">Leg Press: Works the <br>quadriceps and glutes</p>
                     </div>
                 </div>
                 <div class="col-2 relative w-[27.17%] bg-[url('/images/exercise5.jpg')] bg-cover bg-center">
@@ -299,32 +299,32 @@
                 </p>
             </div>
         </div>
-        <div class="bg-[rgba(36,36,36,.7)] rounded-[18px] img mx-[13.2%] space-y-[27.5px] py-[27.5px] flex-col ">
-            <div class="top3 flex justify-evenly w-[100%] h-[350px] overflow-hidden">
-                <div class="img1 w-[30.82%] overflow-hidden rounded-[18px]">
-                    <img class="w-full scale-110" src="images/trainer1.png" alt="">
+        <div class="bg-[rgba(36,36,36,.7)] aspect-[265/151] rounded-[18px] img mx-[13.2%] space-y-[27.5px] py-[27.5px] flex-col ">
+            <div class="top3 flex justify-evenly w-[100%] aspect-[265/68]">
+                <div class="img1 relative w-[30.82%] overflow-hidden rounded-[18px]">
+                    <img class=" absolute top-1/2 left-1/2 tranform -translate-x-1/2 -translate-y-1/2" src="images/trainer1.png" alt="">
                     <p class="name"></p>
                 </div>
-                <div class="img2 w-[30.82%] rounded-[18px] overflow-hidden">
-                    <img class="w-full " src="images/trainer2.png" alt="">
+                <div class="img2 relative w-[30.82%] rounded-[18px] overflow-hidden">
+                    <img class=" absolute top-1/2 left-1/2 tranform -translate-x-1/2 -translate-y-1/2" src="images/trainer2.png" alt="">
                     <p class="name"></p>
                 </div>
-                <div class="img3 w-[30.82%] overflow-hidden rounded-[18px]">
-                    <img class="w-full scale-100 relative bottom-[45px]" src="images/trainer3.png" alt="">
+                <div class="img3 relative w-[30.82%] overflow-hidden rounded-[18px]">
+                    <img class="absolute top-1/2 left-1/2 tranform -translate-x-1/2 -translate-y-1/2" src="images/trainer3.png" alt="">
                     <p class="name"></p>
                 </div>
             </div>
-            <div class="bottom3 flex justify-evenly h-[350px]">
-                <div class="img4 w-[30.82%] overflow-hidden rounded-[18px]">
-                    <img class="w-full scale-150 relative top-[50px]" src="images/trainer4.png" alt="">
+            <div class="bottom3 flex justify-evenly aspect-[265/68]">
+                <div class="img4 relative w-[30.82%] overflow-hidden rounded-[18px]">
+                    <img class="scale-150 absolute top-1/2 left-1/2 tranform -translate-x-1/2 -translate-y-1/2" src="images/trainer4.png" alt="">
                     <p class="name"></p>
                 </div>
-                <div class="img5 w-[30.82%] overflow-hidden rounded-[18px]">
-                    <img class="w-full relative bottom-[45px]" src="images/trainer5.png" alt="">
+                <div class="img5 relative w-[30.82%] overflow-hidden rounded-[18px]">
+                    <img class="absolute top-1/2 left-1/2 tranform -translate-x-1/2 -translate-y-1/2" src="images/trainer5.png" alt="">
                     <p class="name"></p>
                 </div>
-                <div class="img6 w-[30.82%] overflow-hidden rounded-[18px]">
-                    <img class="w-full " src="images/trainer6.png" alt="">
+                <div class="img6 relative w-[30.82%] overflow-hidden rounded-[18px]">
+                    <img class="absolute top-1/2 left-1/2 tranform -translate-x-1/2 -translate-y-1/2 " src="images/trainer6.png" alt="">
                     <p class="name"></p>
                 </div>
             </div>
